force-app/main/default/objects/OCX_Action_Deployment__c/OCX_Action_Deployment__c.object-meta.xml
<CustomObject>
    <description>Tracks deployment of a Portfolio action plan to Account-level Salesforce CTA Tasks.</description>
    <label>OCX Action Deployment</label>
    <nameField>
        <displayFormat>OAD-{000000}</displayFormat>
        <label>Deployment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCX Action Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>