force-app/main/default/objects/OCX_Action_Deployment__c/fields/OCX_CTA_Count__c.field-meta.xml
<CustomField>
    <fullName>OCX_CTA_Count__c</fullName>
    <label>CTA Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>