force-app/main/default/objects/OCX_Action_Deployment__c/fields/OCX_Deactivated_At__c.field-meta.xml
<CustomField>
    <fullName>OCX_Deactivated_At__c</fullName>
    <label>Deactivated At</label>
    <type>DateTime</type>
</CustomField>