force-app/main/default/objects/OCX_Action_Deployment__c/fields/OCX_Deactivated_By__c.field-meta.xml
<CustomField>
    <fullName>OCX_Deactivated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deactivated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Deployments Deactivated</relationshipLabel>
    <relationshipName>Deployments_Deactivated</relationshipName>
    <type>Lookup</type>
</CustomField>