force-app/main/default/objects/OCX_Action_Deployment__c/fields/OCX_Deployed_At__c.field-meta.xml
<CustomField>
    <fullName>OCX_Deployed_At__c</fullName>
    <label>Deployed At</label>
    <type>DateTime</type>
</CustomField>