force-app/main/default/objects/OCX_Action_Deployment__c/fields/OCX_Deployed_By__c.field-meta.xml
<CustomField>
    <fullName>OCX_Deployed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Deployments Initiated</relationshipLabel>
    <relationshipName>Deployments_Initiated</relationshipName>
    <type>Lookup</type>
</CustomField>