force-app/main/default/objects/OCX_Action_Deployment__c/fields/OCX_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>OCX_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>