force-app/main/default/objects/OCX_Action_Deployment__c/fields/OCX_Published_Content__c.field-meta.xml
<CustomField>
    <fullName>OCX_Published_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Published Content</label>
    <referenceTo>OCX_Published_Content__c</referenceTo>
    <relationshipLabel>Action Deployments</relationshipLabel>
    <relationshipName>Action_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>