force-app/main/default/objects/OCX_Action_Deployment__c/fields/OCX_Source_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Source_Resource_ID__c</fullName>
    <label>Source Resource ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>