force-app/main/default/objects/OCX_Action_Deployment__c/fields/OCX_Source_Version__c.field-meta.xml
<CustomField>
    <fullName>OCX_Source_Version__c</fullName>
    <label>Source Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>