force-app/main/default/objects/OCX_Action_Deployment__c/fields/OCX_Status__c.field-meta.xml
<CustomField>
    <fullName>OCX_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEPLOYING</fullName>
                <default>true</default>
                <label>Deploying</label>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>DEACTIVATING</fullName>
                <label>Deactivating</label>
            </value>
            <value>
                <fullName>DEACTIVATED</fullName>
                <label>Deactivated</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>PARTIALLY_FAILED</fullName>
                <label>Partially Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>